tests/examples/good/garbage_collector/good105.lat
int main() {
    string[] arr; 
    int i = 1;
    while (i < 20) {
        i = i + 2;
    }
    return 0;
}

