tests/examples/bad/inheritance_method_ret_type_mismatch2.lat
int main() {
    return 1;
}

class A {
    int f(int b) {
        return 1;
    }
}


class B extends A {
    int[] f(int b) {
        int[] arr;
        return arr; 
    }
}